Revert "Run prettier"
This reverts commit 90bdab4a5d629901cf1baee1bc656079770b2b01.

Revert plop_templates prettier

--- a/plop_templates/components/component.types.hbs
+++ b/plop_templates/components/component.types.hbs
@@ -1,10 +1,14 @@
-export type
-{{pascalCase componentName}}Props = { /** * Id prefix for DOM elements inside
-{{pascalCase componentName}}
-component */ domID?: string; /** * Test prefix for `data-testid` attribute that
-will be appended to DOM elements inside
-{{pascalCase componentName}}
-component */ dataTestId?: string; /** * className that is added to the root
-element of the
-{{pascalCase componentName}}
-*/ className?: string; };
+export type {{pascalCase componentName}}Props = {
+  /**
+   * Id prefix for DOM elements inside {{pascalCase componentName}} component
+   */
+  domID?: string;
+  /**
+   * Test prefix for `data-testid` attribute that will be appended to DOM elements inside {{pascalCase componentName}} component
+   */
+  dataTestId?: string;
+  /**
+   * className that is added to the root element of the {{pascalCase componentName}}
+   */
+  className?: string;
+};
