--- a/plop_templates/components/index.hbs
+++ b/plop_templates/components/index.hbs
@@ -1,4 +1,2 @@
-export { default as
-{{pascalCase componentName}}
-} from "./{{pascalCase componentName}}"; export type {
-{{pascalCase componentName}}Props } from "./{{pascalCase componentName}}.types";
+export { default as {{pascalCase componentName}} } from "./{{pascalCase componentName}}";
+export type { {{pascalCase componentName}}Props } from "./{{pascalCase componentName}}.types";
