--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -19,6 +19,18 @@
 }
 
 /* PLOP_INJECT_IMPORT */
+.sa-home-page{
+}
+
+.sa-about-page{
+}
+
+.sa-pdf-viewer-page{
+}
+
+.sa-pdf-viewer{
+}
+
 .sa-error404-page {
   --sa-error404-page-background-color: var(--sa-neutral-color-2);
 }
