--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,22 +12,27 @@
     flex-direction: row;
     text-align: center;
     align-items: center;
-    color: #fff;
+
   
     .logo {
     padding: 5px 5px 5px 5px ;
     margin-left: 3%;
     .brand {
-    
-        img{
-          width: 120px;
-          height: auto;
-          text-align: center;
+      text-decoration: none;
+      display: flex;
 
+          img{
+          width: 35px;
+          height: auto;        
         }
-
-        color: #fff;
-        text-decoration: none;
+        
+        .brand-name{
+          display: flex;
+          color: #000;
+          @include typographyMediumL;
+          padding-left: 5%;
+        }    
+        
       }
     }
   
