--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,2 +1,92 @@
 .sa-home-page {
+  /*height: 100%;
+  background-color: var(--sa-home-page-background-color);
+  background-image: url(../../icons/HomePage/background-circles.svg);
+  background-size: cover;
+  background-position: center;*/
+  position: relative;
+  text-align: center;
+
+  .background-circles {
+    position: fixed;
+    top: 148px;
+    left: -60px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
+  h1 {
+    @include typographyBoldXxl;
+    color: var(--sa-home-page-welcome-text-color);
+    width: 400px;
+    margin: 96px auto 0px auto;
+  }
+
+  h2 {
+    @include typographyMediumL;
+    color: var(--sa-home-page-slogan-text-color);
+    width: 457px;
+    margin: 16px auto 0px auto;
+  }
+
+  h3 {
+    @include typographyMediumS;
+    color: var(--sa-home-page-getstart-text-color);
+    width: 233px;
+    margin: 48px auto 0px auto;
+  }
+
+  button {
+    @include typographyMediumL;
+    color: var(--sa-home-page-button-text-color);
+
+    width: 221px;
+    height: 54px;
+    margin-top: 32px;
+    padding: 12px 30px;
+
+    background-color: var(--sa-home-page-button-color);
+    border-radius: 8px;
+
+    cursor: pointer;
+  }
+
+  .home-page-description-wrapper {
+    width: 1219px;
+    height: 272px;
+
+    margin: 60px auto 200px auto;
+
+    .home-page-description {
+      background-color: var(--sa-home-page-description-background-color);
+      box-shadow: rgba(0, 0, 0, 0.8);
+      width: 272px;
+      height: 272px;
+      border-radius: 16px;
+      text-align: center;
+      margin: 0px 16px 0px 16px;
+
+      float: left;
+
+      .home-page-icon {
+        margin: 48px auto 0px auto;
+      }
+
+      h3 {
+        @include typographyBoldS;
+        color: var(--sa-home-page-description-title-color);
+        text-align: center;
+        margin-top: 32px;
+      }
+
+      h4 {
+        @include typographyRegularXxs;
+        color: var(--sa-home-page-description-text-color);
+        width: 93px;
+        margin: 16px auto 0px auto;
+        text-align: center;
+      }
+    }
+  }
 }
