--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import "../pages/PdfViewerPage/PdfViewerPage.scss";
 @import "../pages/Error404Page/Error404Page.scss";
 @import "../components/RedCircle/RedCircle.scss";
+@import "../components/UploadModal/UplodaModal.scss";
