--- a/src/components/PDFViewer/PDFViewer.scss
+++ b/src/components/PDFViewer/PDFViewer.scss
@@ -1,9 +1,9 @@
-.sa-red-circle {
+.sa-pdf-viewer {
   width: 100px;
   height: 100px;
 
-  background-color: var(--sa-red-circle-background-color);
-  color: var(--sa-red-circle-text-color);
+  background-color: var(--sa-pdf-viewer-background-color);
+    color: var(--sa-pdf-viewer-text-color);
 
   border-radius: 50px;
   display: flex;
