--- a/src/pages/PdfViewerPage/PdfViewerPage.scss
+++ b/src/pages/PdfViewerPage/PdfViewerPage.scss
@@ -1,4 +1,9 @@
 .sa-pdf-viewer-page {
-  height: 90vh;
-  width: 99vw;
+  height: calc(100vh - 64px);
+  width: 100%;
+
+  iframe {
+    display: block;
+    border: none;
+  }
 }
