--- a/src/components/UploadModal/UplodaModal.scss
+++ b/src/components/UploadModal/UplodaModal.scss
@@ -9,7 +9,7 @@
   .modal-wrapper {
     background-color: var(--sa-upload-modal-background-color);
     width: 480px;
-    height: 421px;
+    //height: 421px;
 
     position: relative;
     margin: 175px auto;
@@ -106,6 +106,33 @@
       }
     }
 
+    .modal-upload-button {
+      //margin-top: 32px;
+      background-color: transparent;
+      border: 0px;
+      width: 125px;
+      height: 33px;
+      padding: 7px 16px;
+      margin: auto auto 10px auto;
+
+      position: relative;
+      cursor: pointer;
+
+      @include typographyRegularS;
+      color: var(--sa-upload-modal-select-button-color);
+      text-align: center;
+
+      input {
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        cursor: pointer;
+      }
+    }
     .modal-link-section {
       @include typographyRegularXs;
       background-color: var(--sa-upload-modal-linlk-section);
