--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -4,7 +4,6 @@
   background-image: url(../../icons/HomePage/background-circles.svg);
   background-size: cover;
   background-position: center;*/
-  position: relative;
   text-align: center;
 
   .background-circles {
@@ -16,62 +15,48 @@
     z-index: -1;
   }
 
-  h1 {
+  .sa-home-page-title {
     @include typographyBoldXxl;
     color: var(--sa-home-page-welcome-text-color);
-    width: 400px;
-    margin: 96px auto 0px auto;
+    text-align: center;
+    margin-top: 96px;
   }
 
-  h2 {
+  .home-page-slogan {
     @include typographyMediumL;
     color: var(--sa-home-page-slogan-text-color);
-    width: 457px;
-    margin: 16px auto 0px auto;
+    text-align: center;
+    margin-top: 16px;
   }
 
-  h3 {
+  .sa-home-page-get-started {
     @include typographyMediumS;
     color: var(--sa-home-page-getstart-text-color);
-    width: 233px;
-    margin: 48px auto 0px auto;
+    text-align: center;
+    margin-top: 48px;
   }
 
-  button {
-    @include typographyMediumL;
-    color: var(--sa-home-page-button-text-color);
-
-    width: 221px;
-    height: 54px;
+  .upload-pdf-button {
     margin-top: 32px;
-    padding: 12px 30px;
-
-    background-color: var(--sa-home-page-button-color);
-    border-radius: 8px;
-
-    cursor: pointer;
   }
 
   .home-page-description-wrapper {
-    width: 1219px;
-    height: 272px;
+    margin: 60px 128px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
-    margin: 60px auto 200px auto;
+    gap: 32px;
 
     .home-page-description {
       background-color: var(--sa-home-page-description-background-color);
       box-shadow: rgba(0, 0, 0, 0.8);
-      width: 272px;
-      height: 272px;
+      padding: 32px;
+
       border-radius: 16px;
       text-align: center;
-      margin: 0px 16px 0px 16px;
 
-      float: left;
-
-      .home-page-icon {
-        margin: 48px auto 0px auto;
-      }
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
       h3 {
         @include typographyBoldS;
@@ -83,8 +68,7 @@
       h4 {
         @include typographyRegularXxs;
         color: var(--sa-home-page-description-text-color);
-        width: 93px;
-        margin: 16px auto 0px auto;
+        width: 208px;
         text-align: center;
       }
     }
