added icons to toolbar

--- a/public/web/viewer.css
+++ b/public/web/viewer.css
@@ -1128,6 +1128,9 @@
   --toolbarButton-viewLayers-icon: url(images/toolbarButton-viewLayers.svg);
   --toolbarButton-currentOutlineItem-icon: url(images/toolbarButton-currentOutlineItem.svg);
   --toolbarButton-search-icon: url(images/toolbarButton-search.svg);
+  --toolbarButton-reference-details-icon : url(images/toolbarButton-referenceDetails.svg);
+  --toolbarButton-knowledge-graph-icon: url(images/toolbarButton-knowledgeGraph.svg);
+  --toolbarButton-summary-icon : url(images/toolbarButton-summary.svg);
   --findbarButton-previous-icon: url(images/findbarButton-previous.svg);
   --findbarButton-next-icon: url(images/findbarButton-next.svg);
   --secondaryToolbarButton-firstPage-icon: url(images/secondaryToolbarButton-firstPage.svg);
@@ -2352,6 +2355,21 @@ a.secondaryToolbarButton[href="#"] {
 #viewFind::before {
   -webkit-mask-image: var(--toolbarButton-search-icon);
   mask-image: var(--toolbarButton-search-icon);
+}
+
+#referenceDetails::before {
+  -webkit-mask-image: var(--toolbarButton-reference-details-icon);
+  mask-image: var(--toolbarButton-reference-details-icon);
+}
+
+#knowledgeGraph::before {
+  -webkit-mask-image: var(--toolbarButton-knowledge-graph-icon);
+  mask-image: var(--toolbarButton-knowledge-graph-icon);
+}
+
+#summary::before {
+  -webkit-mask-image: var(--toolbarButton-summary-icon);
+  mask-image: var(--toolbarButton-summary-icon);
 }
 
 [dir="ltr"] .pdfSidebarNotification::after {
