--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "./theme/typography.scss";
 
 /* PLOP_INJECT_IMPORT */
+@import '../components/TestTool/TestTool.scss';
 @import "../components/Button/Button.scss";
 @import "../components/Header/Header.scss";
 @import "../pages/HomePage/HomePage.scss";
