--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,8 @@
 @import "./theme/typography.scss";
 
 /* PLOP_INJECT_IMPORT */
+@import '../components/KnowledgeGraph/KnowledgeGraph.scss';
+@import '../pages/TestGraphPage/TestGraphPage.scss';
 @import "../components/Button/Button.scss";
 @import "../components/Header/Header.scss";
 @import "../pages/HomePage/HomePage.scss";
