--- a/src/components/Summary/Summary.scss
+++ b/src/components/Summary/Summary.scss
@@ -1,2 +1,18 @@
 .sa-summary {
+    color: var(--sa-neutral-color-1);
+        justify-content: space-evenly;
+    
+        h1 {
+            @include typographyMediumL;
+            padding: 16px 248px 16px 8px
+        }
+    
+        h2 {
+            @include typographyMediumS;
+            padding: 16px 273px 16px 8px
+        }
+    
+        p {
+            @include typographyRegularXs;
+        }
 }
