--- a/src/components/UploadModal/UploadModal.scss
+++ b/src/components/UploadModal/UploadModal.scss
@@ -161,6 +161,14 @@
       }
     }
 
+    .modal-support-message {
+      @include typographyRegularXxs;
+      size: 10px;
+      color: var(--sa-neutral-color-4);
+      text-align: center;
+      margin-top: 6px;
+      height: 12px;
+    }
     .modal-error-message {
       @include typographyRegularXxs;
       size: 10px;
