react base setup reference component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "./theme/typography.scss";
 
 /* PLOP_INJECT_IMPORT */
+@import "../components/Reference/Reference.scss";
 @import "../components/Summary/Summary.scss";
 @import "../components/TestTool/TestTool.scss";
 @import "../components/Button/Button.scss";
