--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "./theme/typography.scss";
 
 /* PLOP_INJECT_IMPORT */
+@import '../components/Loader/Loader.scss';
 @import "../components/Summary/Summary.scss";
 @import "../components/TestTool/TestTool.scss";
 @import "../components/Button/Button.scss";
