--- a/src/components/SidebarError/SidebarError.scss
+++ b/src/components/SidebarError/SidebarError.scss
@@ -49,7 +49,8 @@
       .sidebar-error-input-text {
         @include typographyRegularXs;
         margin-bottom: 8px;
-        padding: 8px 0px;
+        padding: 8px;
+        box-sizing: border-box;
         width: 100%;
         border: 0px;
         border-radius: 4px;
@@ -57,7 +58,6 @@
 
         &::placeholder {
           color: var(--sa-neutral-color-3);
-          padding-left: 8px;
         }
       }
       .sidebar-error-button {
