--- a/src/components/SupportedPaperList/SupportedPaperList.scss
+++ b/src/components/SupportedPaperList/SupportedPaperList.scss
@@ -13,6 +13,7 @@
     h2 {
       @include typographyRegularXxs;
       margin-top: 16px;
+      margin-bottom: 0px;
       text-align: center;
     }
   }
