--- a/src/pages/Error404Page/Error404Page.scss
+++ b/src/pages/Error404Page/Error404Page.scss
@@ -20,7 +20,7 @@
       transition: ease all 0.5s;
 
       .icon-box {
-        padding: 110px 0px 0px 0px;
+        margin: 110px 0px 0px 0px;
         transition: ease all 0.5s;
         cursor: pointer;
 
