--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -16,6 +16,13 @@
   --sa-error-color-2: #f46036;
   --sa-warning-color-1: #e9cf72;
   --sa-warning-color-2: #e2c044;
+
+  // lighter colors
+  --sa-neutral-color-30-1: #f8f8f8;
+  --sa-neutral-color-30-2: #f5f7f4;
+  --sa-neutral-color-30-3: #dce4df;
+  --sa-neutral-color-30-4: #c5cac7;
+  --sa-neutral-color-30-5: #b4b6b5;
 }
 
 /* PLOP_INJECT_IMPORT */
